@@ -57,3 +57,10 @@ sourceSets {
 tasks.withType(JavaExec).configureEach {
     jvmArgs '--enable-native-access=ALL-UNNAMED'
 }
+
+tasks.matching { it.name == 'engine.Launcher.main()' }.configureEach {
+    if (it instanceof JavaExec) {
+        it.jvmArgs '--enable-native-access=ALL-UNNAMED'
+    }
+}
+
